<resources>
    <!--    activity_main-->
    <string name="app_name">happy_deer</string>
    <string name="start_btn_text" translatable="false">start</string>
    <string name="Interval_time" translatable="false">%1$d days, %2$d hours, %3$d minutes since last activity.</string>
    <string name="Be_ready" translatable="false">You can start anytime</string>
    <string name="Not_ready" translatable="false">I think you need a break</string>
    <string name="First_welcome" translatable="false">Welcome to happy_deer</string>
    <string name="First_usBtn_introduction" translatable="false">Click the button to start recording</string>
    <!--    activity_main_Sidebar-->
    <string name="home_text" translatable="false">Home</string>
    <string name="settings_text" translatable="false">Settings</string>
    <string name="about_text" translatable="false">About</string>
    <!--    activity_setting-->h
    <string name="Settings_Theme_text" translatable="false">Theme</string>
    <string name="Settings_Style_text" translatable="false">Style</string>
    <string name="Settings_Data_text" translatable="false">DataManagement</string>
    <string name="Settings_Version_text" translatable="false">Version</string>
    <string name="Settings_Developers_text" translatable="false">DeveloperMode</string>
    <string name="Settings_Data_export" translatable="false">Data import and export</string>
    <!--    activity_about-->
    <string name="About_Author" translatable="false">author:NANA</string>
    <string name="About_Copyright" translatable="false">© 2024 NANA. All rights reserved.</string>
    <string name="About_OP_source_Description" translatable="false">The current software is open source \n https://github.com/NANAFREE/Happy_Deer</string>
    <string name="About_Feelings" translatable="false">In a person\'s life, there will be too much pain. What keeps us going is probably the tiny, trivial joys found in the ordinary moments of life.</string>
    <string name="About_keep_text" translatable="false">“Discipline is the bridge between goals and accomplishment” \n ― Jim Rohn</string>
    <!--    activity_style-->
    <string name="Style_hint_text" translatable="false">Take effect after restart</string>
    <string name="Style_Set_home_bg" translatable="false">Upload homepage background</string>
    <string name="Style_Set_sidebar_bg" translatable="false">Upload sidebar background</string>
    <string name="Style_Adjust_time_linit" translatable="false">Modify time threshold</string>
    <string name="Style_Set_Day" translatable="false">%1$d days</string>
    <string name="Style_Set_hours" translatable="false">%1$d hours</string>
    <string name="Style_Set_minutes" translatable="false">%1$d minutes</string>
    <!--    activity_theme-->
    <string name="Theme_selection" translatable="false">Theme Selection</string>
    <string name="Theme_default" translatable="false">Default Theme</string>
    <string name="Theme_deer" translatable="false">Deer Theme</string>
    <string name="Theme_flow" translatable="false">Flow Theme</string>
</resources>