<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 主内容区域 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_background"
            android:src="@color/cardview_light_background"
            android:scaleType="centerCrop"
            android:alpha="0.5" />



        <!-- 上部分 -->
        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="120px"
                android:layout_height="120px"
                android:id="@+id/start_menu"
                android:src="@drawable/menu"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="35dp"/>

        </LinearLayout>

        <!-- 中间部分 -->
        <LinearLayout
            android:id="@+id/middle_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/top_section">
            <!-- 这里可以添加中间部分的内容 -->
            <TextView
                android:id="@+id/text_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Interval_time"
                android:textColor="@color/black"
                android:layout_margin="30dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/button_start"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/circular_button"
                android:text="@string/start_btn_text"
                android:textSize="22sp"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Not_ready"
                android:textColor="@color/black"
                android:layout_margin="30dp"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- 下部分 -->
        <LinearLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/middle_section">
            <!-- 这里可以添加下部分的内容 -->
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:id="@+id/revoke"
                android:text="撤销"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#6200EE"
                android:elevation="4dp" />


        </LinearLayout>

    </RelativeLayout>

    <!-- 侧栏 -->
    <RelativeLayout
        android:id="@+id/side_menu"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_sidbar_bg"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:alpha="0.5" />

        <TextView
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_text"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/nav_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/nav_home"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/nav_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/nav_settings"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>
