<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#F7F7F7"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/themeicon"
            android:contentDescription="Settings icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/themeSetting"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Settings_Theme_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/dotsvertical"
            android:contentDescription="Arrow icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#F7F7F7"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/themeicon"
            android:contentDescription="Settings icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/styleSetting"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Settings_Style_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/dotsvertical"
            android:contentDescription="Arrow icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#F7F7F7"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/date"
            android:contentDescription="Privacy icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dateSetting"
            android:text="@string/Settings_Data_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/dotsvertical"
            android:contentDescription="Arrow icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#F7F7F7"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/date"
            android:contentDescription="Privacy icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dataExport"
            android:text="@string/Settings_Data_export"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/dotsvertical"
            android:contentDescription="Arrow icon" />
    </LinearLayout>

    <!-- 可以添加更多的设置项 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#F7F7F7"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/version"
            android:contentDescription="Privacy icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/version"
            android:text="@string/Settings_Version_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/dotsvertical"
            android:contentDescription="Arrow icon" />
    </LinearLayout>
    <!-- 可以添加更多的设置项 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/warning"
        android:visibility="gone"
        android:background="#F7F7F7"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp"
        >

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/warning"
            android:contentDescription="Privacy icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Settings_Developers_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="70px"
            android:layout_height="100px"
            android:src="@drawable/dotsvertical"
            android:contentDescription="Arrow icon" />
    </LinearLayout>

</LinearLayout>
